# new-tokio-smtp

./: .gitignore  Cargo.toml  README.md
examples/: from_readme.rs  readme.rs
notes/: concept.md  structure.md
src/: ascii.rs  chain.rs  command.rs  common.rs  connect.rs  connection.rs  data_types.rs  ehlo_data.rs  error.rs  future_ext.rs  io.rs  lib.rs  mock.rs  response.rs  send_mail.rs  tls_utils.rs  utils.rs
src/command/: auth_login.rs  combinators.rs  data.rs  ehlo.rs  mod.rs  reset.rs  simple.rs  starttls.rs
src/command/auth/: login.rs  mod.rs  plain.rs
src/io/: connect.rs  dot_stashing.rs  flush.rs  mod.rs  parse_result.rs  socket.rs
tests/mock/: chain.rs  command.rs  issue_05.rs  main.rs  send_mail.rs
