[package]
authors = ["Philipp Korber <p.korber@1aim.com>"]
name = "new-tokio-smtp"
description = "extendible smtp implementation for tokio"
documentation = "https://docs.rs/new-tokio-smtp"
keywords = ["smtp", "tokio", "mail", "rfc5321"]
categories = []
license = "MIT OR Apache-2.0"
repository = "https://github.com/1aim/new-tokio-smtp"
version = "0.2.0"

[dependencies]
futures = "0.1"
bytes = "0.4"
tokio = "0.1"
tokio-io = "0.1"
tokio-tls = "0.1.4"
native-tls = "0.1.5"
base64 = "0.6"

rand = { version="0.4.2", optional=true }
vec1 = { version="1.0", optional=true }

[features]
default = ['send_mail']
send_mail = ['vec1']
mock_support = []
mock_impl = ["mock_support", "rand"]
