[package]
authors = ["Philipp Korber <p.korber@1aim.com>"]
name = "new-tokio-smtp"
description = "extendible smtp implementation for tokio"
documentation = "https://docs.rs/new-tokio-smtp"
keywords = ["smtp", "tokio", "mail", "rfc5321"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/1aim/new-tokio-smtp"
version = "0.8.2"
readme="./README.md"
edition="2018"

[features]
default = ['send-mail']
send-mail = ['vec1']
mock-support = []
mock-impl = ["mock-support", "rand"]

[dependencies]
futures = "0.1"
bytes = "0.4"
tokio = "0.1.11"
tokio-io = "0.1.9"
tokio-tls = "0.2.0"
native-tls = "0.2.1"
base64 = "0.9.3"
hostname = "0.1.5"
rand = { version="0.5.5", optional=true }
vec1 = { version="1.1.0", optional=true }

[dev-dependencies]
rpassword = "2.0"

[badges]
maintenance = { status = "passively-maintained" }
